// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DOM structure matches snapshot 1`] = `
<div>
  <div
    class="min-h-screen min-w-[100vw] bg-red-900 flex flex-col p-5 items-center md:flex-row md:justify-between md:p-10"
  >
    <div
      class="h-16 w-16 z-0 rounded-full bg-yellow-400 absolute outline outline-yellow-400 outline-offset-[30px] bottom-6 left-12"
    />
    <div
      class="h-24 w-24 z-0 rounded-full bg-yellow-400 absolute outline outline-yellow-400 outline-offset-[80px] top-24 right-16"
    />
    <div
      class="h-32 w-32 z-0 rounded-full bg-yellow-400 absolute outline outline-yellow-400 outline-offset-[100px] top-12 left-12"
    />
    <form
      action=""
      class="bg-white z-10 p-7 rounded flex flex-col gap-5 min-w-[25%]"
      method=""
      role="form"
    >
      <h1
        class="font-bold text-3xl"
      >
        Log in
      </h1>
      <div>
        <label
          for="username"
          role="user-label"
        />
        <input
          class="min-w-full min-h-[10%] bg-slate-200 focus:outline-none p-3 placeholder:text-slate-500"
          name="username"
          placeholder="Username"
          required=""
          role="username-input"
          type="text"
        />
      </div>
      <div>
        <label
          for="password"
          role="password-label"
        />
        <input
          class="min-w-full min-h-[10%] bg-slate-200 focus:outline-none p-3 placeholder:text-slate-500"
          name="password"
          placeholder="Password"
          required=""
          role="user-password"
          type="password"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`render of Form 1`] = `
<form
  action=""
  class="bg-white z-10 p-7 rounded flex flex-col gap-5 min-w-[25%]"
  method=""
  role="form"
>
  <h1
    class="font-bold text-3xl"
  >
    Log in
  </h1>
  <div>
    <label
      for="username"
      role="user-label"
    />
    <input
      class="min-w-full min-h-[10%] bg-slate-200 focus:outline-none p-3 placeholder:text-slate-500"
      name="username"
      placeholder="Username"
      required=""
      role="username-input"
      type="text"
    />
  </div>
  <div>
    <label
      for="password"
      role="password-label"
    />
    <input
      class="min-w-full min-h-[10%] bg-slate-200 focus:outline-none p-3 placeholder:text-slate-500"
      name="password"
      placeholder="Password"
      required=""
      role="user-password"
      type="password"
    />
  </div>
</form>
`;
